<resources>
    <string name="app_name">ExamenUF1ArnauLloveras</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grade">Grade:</string>
    <string name="group">Group</string>
    <string name="name">Name</string>
    <string name="add">+</string>
    <string name="select">select</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="suspesos">Suspesos</string>
    <string name="suspendeds">Suspendeds</string>
    <string name="approveds">Approveds</string>
</resources>